--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,7 +8,7 @@ main:
     url: about
     weight: 10
   - name: Digital Archive
-    identifier: digital archive
+    identifier: documentaries
     weight: 20  
   - name: Partners
     url: partners
