--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -31,6 +31,7 @@ jobs:
         with:
           # Fetch history for Hugo's .GitInfo and .Lastmod
           fetch-depth: 0
+          persist-credentials: true
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
@@ -62,6 +63,8 @@ jobs:
           echo "Hugo Cache Dir: $(hugo config | grep cachedir)"
           hugo --minify
       - uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: Saved build output
 
   # Deploy website to GitHub Pages hosting
   deploy:
