--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,7 +7,7 @@ main:
   - name: About
     identifier: about
     weight: 10
-  - name: Intro
+  - name: Introduction
     parent: about
     url: introduction
     weight: 10  
