--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,6 +11,14 @@ main:
     parent: about
     url: introduction
     weight: 10  
+  - name: Research Method
+    parent: about
+    url: research
+    weight: 20    
+  - name: Research Questions
+    parent: about
+    url: questions
+    weight: 30    
   - name: Partners
     url: partners
     weight: 30  
