--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -40,7 +40,8 @@ header:
     show_day_night: true
     show_search: true
     highlight_active_link: false
-
+    logo:
+       filename: "logo.jpeg"
 # Site footer
 
 footer:
