--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -37,8 +37,8 @@ header:
     align: r
     show_logo: true
     logo:
-      text: ""
-      filename: "logo.jpeg"
+      text: ''
+      filename: 'logo.jpeg'
     show_language: false
     show_day_night: true
     show_search: true
