--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -35,7 +35,7 @@ header:
   navbar:
     enable: true
     align: r
-    show_logo: true
+    show_logo: false
     logo:
       text: ''
       filename: 'logo.jpeg'
