--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -49,7 +49,7 @@ footer:
   copyright:
     notice: '© {year}'
     license:
-      enable: true
+      enable: false
       allow_derivatives: false
       share_alike: false
       allow_commercial: false
