--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -48,9 +48,11 @@ header:
 footer:
   copyright:
     notice: '© {year} <a href="https://warwick.ac.uk/terms/privacy">Privacy Policy</a> - <a href="https://warwick.ac.uk/terms/general">Terms of Use</a> - <a href="/cookies/">Cookies</a> - <a href="/accessibility/">Accessibility</a><br><div class="d-flex flex-row-reverse bd-highlight">
+  <div align="center">
+  <div class="p-2 bd-highlight"> <a href="https://www.brookes.ac.uk/">{{< figure src="brookes.png" alt="Oxford Brookes University Logo">}}</a></div>
   <div class="p-2 bd-highlight"><a href="https://www.brookes.ac.uk/">{{< figure src="brookes.png" alt="Oxford Brookes University Logo">}}</a></div>
   <div class="p-2 bd-highlight"><a href="https://www.brookes.ac.uk/">{{< figure src="brookes.png" alt="Oxford Brookes University Logo">}}</a></div>
-  <div class="p-2 bd-highlight"><a href="https://www.brookes.ac.uk/">{{< figure src="brookes.png" alt="Oxford Brookes University Logo">}}</a></div>
+  </div> 
 </div>'
     license:
       enable: false
