--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -47,7 +47,10 @@ main:
   - name: Documentaries
     parent: outputs
     url: documentaries
-    weight: 30       
+    weight: 30  
+  - name: Stories
+    url: post
+    weight: 10    
   - name: Contact
     url: contact
     weight: 50
