--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -56,6 +56,10 @@ jobs:
         uses: actions/upload-pages-artifact@v4
         with:
           path: ./public
+      - name: Download Artifact
+        uses: actions/download-artifact@v4
+        with:
+          path: ./public
       - name: Save copy with Hugo
         env:
           HUGO_ENVIRONMENT: production
