--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -64,7 +64,7 @@ footer:
 # Localization
 
 locale:
-  date_format: 'Jan 2, 2006'
+  date_format: '01/02/06'
   time_format: '3:04 PM'
   address_format: en-us
 
